<resources>
    <string name="app_name">WeTalk</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="or">Or</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="not_a_member">Not a member?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_account_with_email">Create account with email</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
</resources>